--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -747,8 +747,8 @@ jobs:
       TargetPath: $(Build.ArtifactStagingDirectory)
       ArtifactName: rpm-centos7
 
-# rpmbuild on CentOS Stream 8 is slow, we use a separate job for CentOS Stream 8 instead of strategy.matrix so that
-# TestRpmPackage can start right after BuildRpmPackageCentOS7 finishes.
+# rpmbuild on Red Hat UBI 8 is slow for unknown reason, so we use a separate job for Red Hat UBI 8 instead of
+# strategy.matrix so that TestRpmPackage can start right after BuildRpmPackageCentOS7 finishes.
 - job: BuildRpmPackageUbi8
   displayName: Build Rpm Package Red Hat Universal Base Image 8
   # Do not run this job for Pull Requests due to the slowness
